// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component should render and match the snapshot percentage less than 1% 1`] = `
<div
  class="container"
>
  <div
    class="align-items-end d-flex"
  >
    <div
      class="flex-grow-1"
    >
      <div
        class="labels justify-content-between"
      >
        <span
          class="text-2"
        >
          officiis pariatur
        </span>
        <div
          class=""
        >
          <h5>
            &lt;1%
          </h5>
        </div>
      </div>
      <div
        class="bar"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar component should render and match the snapshot percentage more than or equals 1% 1`] = `
<div
  class="container"
>
  <div
    class="align-items-end d-flex"
  >
    <div
      class="flex-grow-1"
    >
      <div
        class="labels justify-content-between"
      >
        <span
          class="text-2"
        >
          atque ea
        </span>
        <div
          class=""
        >
          <h5>
            80000%
          </h5>
        </div>
      </div>
      <div
        class="bar"
      >
        <div
          class="value"
          style="width: 80%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar component should render and match the snapshot range with middle value 1`] = `
<div
  class="container"
>
  <span
    class="text-2"
  >
    et quia
  </span>
  <div
    class="align-items-center d-flex"
  >
    <div
      class="flex-grow-1"
    >
      <div
        class="labels"
      >
        <div
          class="position-relative flex-grow-1 px-1"
        >
          <h5
            class="value left"
            style="right: 20%;"
          >
            800
          </h5>
          <h5
            class="value"
            style="left: 100%;"
          >
            1000
          </h5>
        </div>
      </div>
      <div
        class="bar"
      >
        <div
          class="value position-absolute"
          style="width: 20%; left: 80%;"
        />
        <div
          class="line"
          style="left: 90%;"
        />
      </div>
      <div
        class="labels"
      >
        <h5
          class="value"
          style="right: 10%;"
        >
          900
        </h5>
      </div>
    </div>
    <span
      class="ml-3 text-4"
    >
      1000
    </span>
  </div>
</div>
`;

exports[`ProgressBar component should render and match the snapshot range without middle value 1`] = `
<div
  class="container"
>
  <span
    class="text-2"
  >
    fugit est
  </span>
  <div
    class="align-items-end d-flex"
  >
    <div
      class="flex-grow-1"
    >
      <div
        class="labels"
      >
        <div
          class="position-relative flex-grow-1 px-1"
        >
          <h5
            class="value left"
            style="right: 20%;"
          >
            800
          </h5>
          <h5
            class="value"
            style="left: 100%;"
          >
            1000
          </h5>
        </div>
      </div>
      <div
        class="bar"
      >
        <div
          class="value position-absolute"
          style="width: 20%; left: 80%;"
        />
      </div>
    </div>
    <span
      class="ml-3 text-4"
    >
      1000
    </span>
  </div>
</div>
`;

exports[`ProgressBar component should render and match the snapshot value 1`] = `
<div
  class="container"
>
  <span
    class="text-2"
  >
    hic aut
  </span>
  <div
    class="align-items-end d-flex"
  >
    <div
      class="flex-grow-1"
    >
      <div
        class="labels"
      >
        <div
          class="position-relative flex-grow-1 px-1"
        >
          <h5
            class="value"
            style="left: 80%;"
          >
            800
          </h5>
        </div>
      </div>
      <div
        class="bar"
      >
        <div
          class="value"
          style="width: 80%;"
        />
      </div>
    </div>
    <span
      class="ml-3 text-4"
    >
      1000
    </span>
  </div>
</div>
`;
